kubernetes/apps/database/dragonfly-operator/cluster/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly
spec:
  podSelector:
    matchLabels:
      app: dragonfly
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 6379
          protocol: TCP
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              control-plane: controller-manager
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitor
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
        - ipBlock:
            cidr: 192.168.42.0/24
      ports:
        - port: 9999
          protocol: TCP
